fix: missing picture on homepage

--- a/app/assets/stylesheets/components/_portfolio.scss
+++ b/app/assets/stylesheets/components/_portfolio.scss
@@ -4,6 +4,8 @@
 .portfolio-img{
   position: relative;
   overflow: hidden;
+  height: 370px;
+  margin-bottom: 20px;
 }
 .portfolio-img .port-item{
   width: 100%;
