--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,7 +17,7 @@
     </h2>
     <div class="row">
       <% @products.each do |product| %>
-      <div class="sets portfolio-img col-xs-12 col-md-6">
+      <div class="sets portfolio-img col-xs-12 col-md-6" style="height: auto">
         <a href="#" class="<%=product.category%>">
           <img src="<%=product.photo%>" class='port-item'>
           <div class="portfolio-item-details">
