--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,7 @@
     <a href="#rue">LA RUE</a>
     <a href="#voyage">VOYAGES</a>
     <a href="#portrait">PORTRAITS</a>
+    <a href="#portrait">NOIR ET BLANC</a>    
     <a href="#autre">AUTRES</a>
   </div>
 </div>
